# analysis-environment

./: .gitignore  Dockerfile  Dockerfile copy  Makefile  Pipfile  README.md  pyproject.toml
envfiles/: .env
src/: main.py
src/notebooks/: Untitled.ipynb  kame008_LOOCVAndR2Score.ipynb  kame018_LogisticRegressionAndClassificationMetrics.ipynb  kame024_PCA.ipynb  kame025_MNISTWithPCA.ipynb  kame026_kNN.ipynb  kame033_LightGBM.ipynb
src/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  kame008_LOOCVAndR2Score-checkpoint.ipynb  kame025_MNISTWithPCA-checkpoint.ipynb  kame029_decisionTreeClassifier-checkpoint.ipynb  kame_027_hierarchicalClustering-checkpoint.ipynb  kame_stat_026-checkpoint.ipynb
src/notebooks/kame_ml_training/: kame004_linearRegression.ipynb  kame005_linearRegression.ipynb  kame006_pValue.ipynb  kame009_KFold.ipynb  kame014_Lasso.ipynb  kame015_kNNRegression.ipynb  kame021_ROC.ipynb  kame023_multiClassROCAndAUC.ipynb  kame028_dicisionTree.ipynb  kame031_randomForest.ipynb  kame032_XGBoost.ipynb  kame034SVM.ipynb  kame035_gridSearch.ipynb  kame_stat_026.ipynb
src/notebooks/ml_training/parameter_tuning/: notebook.ipynb
src/selenium_202401/: const.py  load_data.py  load_html.py  load_url.py  main.py
src/test_20230715/: __init__.py
src/test_20230717/: __init__.py
src/test_20230719/: __init__.py
src/test_20231203/: .gv  Untitled.ipynb  __init__.py  beyes_test.ipynb
src/test_20231203/.ipynb_checkpoints/: beyes_test-checkpoint.ipynb
src/utils/: __init__.py  gaussian_process_regression.py
